--- a/carros.css
+++ b/carros.css
@@ -27,4 +27,14 @@ h1 {
     margin-top: 30px;
 }
 
+/*Estilo para las tarjetas creadas para cada modelo de marca*/
+.modeloCard {  
+    background-color: rgb(240, 139, 164);
+    border: 1px solid #76c1f3;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 8px;
+    width: 250px; /*establece un tamaño fijo para cada tarjeta*/
+    display: inline-block; /*ordena las tarjetas en linea horizontal*/
+}
 
