--- a/carros.css
+++ b/carros.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f1c7ea;
+    background-color: #ec3a3a;
     text-align: center;
     padding: 20px;
 }
 
 h1 {
-    color: #e63946;
+    color: #e0d9d9;
 }
 
 #botonesMarcas button {
